--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -102,8 +102,8 @@
 				<div id="pickaabutton" class="w3-col w3-bar w3-leftbar w3-border-light-green" style="height:auto;width:auto"></div>
 				<!--div id="infotubeintersection" class="w3-col l2 w3-leftbar w3-border-light-green" style="margin:10px; padding: 10px; height:90px"></div-->
 				
-				<div id="canvascontainer" class="w3-col" style="width:85%;height:auto">
-					<canvas id="maincanvas" style="width:100%;height:auto"></canvas>
+				<div id="canvascontainer" class="w3-col" style="width:75%;">
+					<canvas id="maincanvas"></canvas>
 				</div>
 				
 				<div id="infomouse"   class="w3-col w3-leftbar w3-border-light-green" sytle="width:auto"></div>
