--- a/topologyviewer/index.html
+++ b/topologyviewer/index.html
@@ -74,7 +74,9 @@
 					<a href="http://rams-research.github.io/index.html"> <i class="fas fa-copyright" alt="(C)"></i> Rodrigo A. Moreira 2023 </a><br>
 					<a href="http://www.bcamath.org/en/people/razevedo"> Research Fellow @ BCAM </a>
 				</div>
-				<div class="w3-col w3-quarter"> <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>. </div>
+				<div class="w3-col w3-quarter"> <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0
+<!-- a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License . -->
+</a> </div>
 			</div>
 		</div>
 		<div class="w3-container">
