--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 		a { text-decoration: none; }
 		li { text-decoration: none; }
 	</style>
+	<script>
+	function insert(data,id) {
+		let html = document.getElementById(id).innerHTML;
+		for (let k=0; k<data.length; k++) {
+			let link  = data[k][0];
+			let doi   = data[k][1];
+			let title = data[k][2];
+			let image = data[k][3];
+			html += `<tr><td class='width:150px'><img src='${image}' style='width:auto;max-width:150px;max-height:3rem;height:auto'></td><td><a href='${link}' class="w3-hover-text-green"><b>${title}</b> <font style='font-size:80%'>${doi}<font></a>`;
+		}
+		document.getElementById(id).innerHTML = html
+	}
+	</script>
 </head>	
 <body>
 <!-- Navbar (sit on top) -->
@@ -57,7 +70,7 @@
 	</div>
 	<p class="w3-center"><em>Science and Research</em></p>
 
-	<div class="w3-half w3-center w3-padding-large">
+	<div class="w3-quarter w3-center w3-padding-large">
 		<p>
 		<b>
 			<i class="fa fa-user w3-margin-right w3-left"></i>Rodrigo A. Moreira <br>
@@ -121,177 +134,186 @@ In particular, the simple contact map analysis and hydrogen bonds network, commo
 	<p class="w3-center"><em>Latest research topics. Click on the figures to get the abstracts</em></p>
 	<div class="w3-container">
 		<div class="w3-panel w3-border w3-round-xxlarge">
-			<details>
-				<summary>
-					<b>Applied Topology, Topological data analysis, Topological energy and dynamics</b>
-					<div class="w3-center">
-						<img src="img/JPhys-Complexity-2019-1.png" style="height:auto; max-width:10%" class="w3-hover-opacity" alt="Sars-CoV-2">
-					</div>	 
-					<div>
-					<ul>
-						<li>
-							<a href="https://doi.org/10.1088/2632-072x/ac664c" class="w3-hover-text-green"> 
-								DOI: 10.1088/2632-072x/ac664c 
-								- <b> The Euler characteristic and topological phase transitions in complex systems </b>
-								<img src="img/JPhys-Complexity-NEWS.jpg" style="height:40px">
-							</a>
-						</li>
-					</ul>
-					</div>
-				</summary>
-				<p>
+		<details>
+		<summary>
+			<b>Applied Topology, Topological data analysis, Topological energy and dynamics</b><br>
+			<div class="w3-center w3-col w3-quarter w3-padding-32">
+				<img src="img/JPhys-Complexity-2019-1.png" style="height:auto; max-width:20%" class="w3-hover-opacity" alt="Sars-CoV-2">
+			</div>
+			<div class="w3-col w3-threequarter">
+			<table id='math'>
+			</table>
+<script>
+insert([
+[
+'https://doi.org/10.1088/2632-072x/ac664c',
+'DOI: 10.1088/2632-072x/ac664c',
+'The Euler characteristic and topological phase transitions in complex systems',
+'img/JPhys-Complexity-NEWS.jpg'
+]
+],'math');
+</script>
+		</summary>
+		<p>
 We use methods and concepts of applied algebraic topology to comprehensively explore the recent idea of topological phase transitions (TPTs) in complex systems. TPTs are characterized by the emergence of nontrivial homology groups as a function of a threshold parameter. Under certain conditions, one can identify TPTs via the zeros of the Euler characteristic or by singularities of the Euler entropy. This work illustrates this possibility by investigating various networks from a topological perspective. We first review the concept of TPTs in brain networks and discuss it in the context of high-order interactions in complex systems. We then investigate TPTs in protein–protein interaction networks using methods of topological data analysis for two variants of the duplication–divergence model. We compare our theoretical and computational results to experimental data freely available for gene co-expression networks of S. cerevisiae, also known as baker's yeast, as well as of the nematode C. elegans. Supporting our theoretical expectations, we can detect TPTs in both networks obtained according to different similarity measures. We then perform numerical simulations of TPTs in four classical network models: the Erdős–Rényi, the Watts–Strogatz, the random geometric, and the Barabasi–Albert models. Finally, we discuss the relevance of these insights for network science.
-				</p>
-			</details>
+		</p>
+		</details>
 		</div>
 		
-		<div class="w3-panel w3-border w3-round-xxlarge">		
-			<details>
-				<summary>
-					<b>SARS-CoV-2, Spike Protein, Molecular Dynamics</b>
-					<div class="w3-center">
-						<img src="img/mechanostability.png" style="height:auto; max-width:15%" class="w3-hover-opacity" alt="Sars-CoV-2">
-						<img src="img/pointmutations.png" style="height:auto; max-width:15%" class="w3-hover-opacity" alt="Point mutations">
-					</div>
-					<div style="text-align:left;">
-						<ul>
-							<li>
-								<a href="https://doi.org/10.1039/d0nr03969a" class="w3-hover-text-green">
-									DOI: 10.1039/d0nr03969a 
-									- <b> Quantitative determination of mechanical stability in the novel coronavirus spike protein </b>
-									<img src="img/nanoscale_400x400.jpg" style="height:40px">
-								</a>
-						 </li>
-						 <li>
-							 <a href="https://doi.org/10.1038/s41467-021-27325-1" class="w3-hover-text-green">
-								 DOI: 10.1038/s41467-021-27325-1 
-								 - <b> Molecular insights into receptor binding energetics and neutralization of SARS-CoV-2 variants </b>
-								 <img src="img/Nature_Communications_Logo.png" style="height:40px">
-							 </a>
-						 </li> 
-						 <li>
-							 <a href="https://doi.org/10.3390/ma13235362" class="w3-hover-text-green">
-								 DOI: 10.3390/ma13235362 
-								 - <b> Characterization of Structural and Energetic Differences between Conformations of the SARS-CoV-2 Spike Protein</b>
-								 <img src="img/materials-logo.webp" style="height:40px">
-							 </a>
-						 </li> 
-						</ul>						
-					</div>
-				</summary>
-				<p>
+		<div class="w3-panel w3-border w3-round-xxlarge w3-row">
+		<details>
+		<summary>
+			<b>SARS-CoV-2, Spike Protein, Molecular Dynamics</b><br>
+			<div class="w3-center w3-col w3-quarter w3-padding-32">
+				<img src="img/mechanostability.png" style="height:auto; max-width:35%" class="w3-hover-opacity" alt="Sars-CoV-2">
+				<img src="img/pointmutations.png" style="height:auto; max-width:35%" class="w3-hover-opacity" alt="Point mutations">
+			</div>
+			<div class="w3-col w3-threequarter">
+			<table id='spike'>
+			</table>
+<script>
+insert([
+[
+'https://doi.org/10.1039/d0nr03969a',
+'DOI:10.1039/d0nr03969a',
+'Quantitative determination of mechanical stability in the novel coronavirus spike protein',
+'img/nanoscale_400x400.jpg'
+],
+[
+'https://doi.org/10.1038/s41467-021-27325-1',
+'DOI:10.1038/s41467-021-27325-1',
+'Molecular insights into receptor binding energetics and neutralization of SARS-CoV-2 variants',
+'img/Nature_Communications_Logo.png'
+],
+[
+'https://doi.org/10.3390/ma13235362',
+'DOI:10.3390/ma13235362',
+'Characterization of Structural and Energetic Differences between Conformations of the SARS-CoV-2 Spike Protein',
+'img/materials-logo.webp'
+]
+],'spike');
+</script>
+			</div>
+		</summary>
+		<p>
 We study the nanomechanical stability of the SARS-CoV-2 (CoV2) spike (S) protein in comparison with SARS-CoV from 2002 (CoV1). Our findings have several biological implications in the subfamily of coronaviruses, as they suggest that the receptor binding domain (RBD) (∼200 amino acids) plays a fundamental role as a damping element of the massive viral particle's motion prior to cell-recognition, while also facilitating viral attachment, fusion and entry.
-				</p>
-				<p>
+		</p>
+		<p>
 Despite an unprecedented global gain in knowledge since the emergence of SARS-CoV-2, almost all mechanistic knowledge related to the molecular and cellular details of viral replication, pathology and virulence has been generated using early prototypic isolates of SARS-CoV-2. We also use atomic force microscopy and molecular dynamics to investigated how these mutations quantitatively affected the kinetic, thermodynamic and structural properties of RBD—ACE2 complex formation. We observed for several variants of concern a significant increase in the RBD—ACE2 complex stability.
-				</p>
-				<p>
+		</p>
+		<p>
 Among the most relevant proteins required by the novel coronavirus to facilitate the cell entry mechanism is the spike protein. This protein possesses a receptor-binding domain (RBD) that binds the cellular angiotensin-converting enzyme 2 (ACE2) and then triggers the fusion of viral and host cell membranes. We provide a comprehensive characterization of the structural stability of the spike protein is a crucial step to find new therapeutics to interrupt the process of recognition.
-				</p>
-			</details>
+		</p>
+		</details>
 		</div>
 
-		<div class="w3-panel w3-border w3-round-xxlarge">
-			<details>
-				<summary>
-					<b>Protein Interface Stability</b>
-					<div class="w3-center">
-						<img src="img/interfacestability.png" style="height:auto; max-width:30%" class="w3-hover-opacity" alt="Interface stability">
-					</div>
-					<div>
-					<ul>
-						<li>
-							<a href="https://doi.org/10.1021/acs.nanolett.1c03584" class="w3-hover-text-green"> 
-									DOI: 10.1021/acs.nanolett.1c03584 
-									- <b> Mapping Mechanostable Pulling Geometries of a Therapeutic Anticalin/CTLA-4 Protein Complex </b>
-									<img src="img/Logo_of_Nano_Letters.svg.png" style="height:40px"> 
-								</a>
-						</li>
-					</ul>
-					</div>
-				</summary>
-				<p>
+		<div class="w3-panel w3-border w3-round-xxlarge w3-row">
+		<details>
+		<summary>
+			<b>Protein Interface Stability</b><br>
+			<div class="w3-center w3-col w3-quarter w3-padding-32">
+				<img src="img/interfacestability.png" style="height:auto; max-width:50%" class="w3-hover-opacity" alt="Interface stability">
+			</div>
+			<div class="w3-col w3-threequarter">
+			<table id='interface'>
+			</table>
+<script>
+insert([
+[
+'https://doi.org/10.1021/acs.nanolett.1c03584',
+'DOI:10.1021/acs.nanolett.1c03584',
+'Mapping Mechanostable Pulling Geometries of a Therapeutic Anticalin/CTLA-4 Protein Complex',
+'img/Logo_of_Nano_Letters.svg.png'
+]
+],'interface');
+</script>
+			</div>
+		</summary>
+		<p>
 Single-molecule AFM force spectroscopy in combination with click chemistry to mechanically dissociate anticalin, a non-antibody protein binding scaffold, from its target (CTLA-4), by pulling from eight different anchor residues. We found that specific pulling residues resulted in significantly higher rupture forces and a decrease in koff by 2–3 orders of magnitude. Anisotropic network modeling and molecular dynamics simulations helped to explain the geometric dependency of mechanostability. These results demonstrate that optimization of attachment residue position on therapeutic binding scaffolds can provide large improvements in binding strength, allowing for mechanical affinity maturation under shear stress without mutation of binding interface residues.
-				</p>
-			</details>
-		</div>
-		
-		 <div class="w3-panel w3-border w3-round-xxlarge">
-			<details>
-				<summary>
-					<b>Coarse-Grain modeling, Cellulose Fibrils, MARTINI 3</b>
-					<div class="w3-center">
-						<img src="img/978-1-0716-1546-1.webp" style="height:auto; max-width:10%" class="w3-hover-opacity" alt="">
-						<img src="img/cellulose.model-1.png" style="height:auto; max-width:20%" class="w3-hover-opacity" alt="Cellulose model">
-					</div>
-					<div>
-						<ul>
-							<li>
-								<a href="https://doi.org/10.3390/ijms23158505" class="w3-hover-text-green"> 
-									DOI: 10.3390/ijms23158505 
-									- <b> Molecular Insight into the Self-Assembly Process of Cellulose Iβ Microfibril </b> 
-									<img src="img/ijms-logo.webp" style="height:40px"> 
-								</a>
-							</li>
-							<li>
-								<a href="https://doi.org/10.3390/molecules27030976" class="w3-hover-text-green"> 
-									DOI: 10.3390/molecules27030976 
-									- <b> Martini 3 Model of Cellulose Microfibrils: On the Route to Capture Large Conformational Changes of Polysaccharides </b> 
-									<img src="img/molecules_logo.png" style="height:40px"> 
-								</a>
-							</li>
-							<li>
-								<a href="https://doi.org/10.1007/978-1-0716-1546-1_16" class="w3-hover-text-green"> 
-									DOI: 10.1007/978-1-0716-1546-1_16 
-									- <b> Assessing the Stability of Biological Fibrils by Molecular-Scale Simulations </b> 
-									<img src="img/springer_logo_high_res.png" style="height:25px"> 
-								</a>
-							</li>
-						</ul>
-					</div>
-				</summary>
-				<p>
-The self-assembly process of β-D-glucose oligomers on the surface of cellulose Iβ microfibril involves crystallization, and this process is analyzed in terms of the length and flexibility of the oligomer chain using molecular dynamics simulations. The characterization of this process involves the structural relaxation of the oligomer, the recognition of the cellulose I microfibril, and the formation of several hydrogen bonds. We also study the interaction between a	protofibril and the cellulose I microfibril in solution.
-				</p>
-				<p>
-High resolution data from all-atom molecular simulations is used to parameterize a Martini 3 coarse-grained (CG) model of cellulose I allomorphs and cellulose type-II fibrils. In this case, elementary molecules are represented by toplogical simplicial complex based on four effective beads centred in the positions of O2, O3, C6, and O6 atoms in the D-glucose cellulose subunit. Non-bonded interactions between CG beads are tuned according to a low statistical criterion of structural deviation using the Martini 3 type of interactions and are capable of being indistinguishable for all studied cases. Our model is capable of describing different fibril-twist angles associated with each type of cellulose fibril in close agreement with atomistic simulation. Our coarse-grain model poses a very small deviation from the native-like structure.
-				</p>
-			</details>
+		</p>
+		</details>
 		</div>
 		
 		<div class="w3-panel w3-border w3-round-xxlarge">
-			<details>
-				<summary>
-					<b>Old works, Hamiltonian model, Exact diagonalization, Quantum Chemistry</b>
-					<div class="w3-center">
-						<img src="img/images_medium_ct-2017-00930w_0006.gif" style="height:auto; max-width:30%" class="w3-hover-opacity" alt="Otherwise">
-					</div>
-					<div>
-						<ul>
-							<li>
-								<a href="https://doi.org/10.1016/j.cplett.2019.04.023" class="w3-hover-text-green"> 
-									DOI: 10.1016/j.cplett.2019.04.023 
-									- <b> Quantification of molecular orbitals based on projection operators: Methodological development and applications to basicity prediction of organic compounds in the gas phase. </b> 
-								</a>
-							</li>	
-							<li> 
-								<a href="https://doi.org/10.1021/acs.jctc.7b00930" class="w3-hover-text-green"> 
-									DOI: 10.1021/acs.jctc.7b00930 
-									- <b> Energy Gaps of Polyradicals from an Effective and Transferable Hamiltonian with through-Bond Interactions </b> 
-									<img src="img/JCTC_logo.png" style="height:40px"> 
-								</a> 
-							</li>	
-							<li> 
-								<a href="https://doi.org/10.1007/s13538-017-0535-7" class="w3-hover-text-green"> 
-									DOI: 10.1007/s13538-017-0535-7 
-									- <b> On the separability of the extended molecule: Constructing the best localized molecular orbitals for an organic molecule bridging two model electrodes. </b> 
-									<img src="img/aip-site-1665400598970.webp" style="height:40px"> 
-								</a> 
-							</li>	 
-						</ul>
-					</div>
-				</summary>
-			</details>
+	 	<details>
+		<summary>
+			<b>Coarse-Grain modeling, Cellulose Fibrils, MARTINI 3</b><br>
+			<div class="w3-center w3-col w3-quarter w3-padding-32">
+				<img src="img/978-1-0716-1546-1.webp" style="height:auto; max-width:25%" class="w3-hover-opacity" alt="">
+				<img src="img/cellulose.model-1.png" style="height:auto; max-width:40%" class="w3-hover-opacity" alt="Cellulose model">
+			</div>
+			<div class="w3-col w3-threequarter">
+			<table id='coarse'>
+			</table>
+<script>
+insert([
+[
+'https://doi.org/10.3390/ijms23158505',
+'DOI:10.3390/ijms23158505',
+'Molecular Insight into the Self-Assembly Process of Cellulose Iβ Microfibril',
+'img/molecules_logo.png'
+],
+[
+'https://doi.org/10.3390/molecules27030976',
+'DOI:10.3390/molecules27030976',
+'Martini 3 Model of Cellulose Microfibrils: On the Route to Capture Large Conformational Changes of Polysaccharides',
+''
+],
+[
+'https://doi.org/10.1007/978-1-0716-1546-1_16',
+'DOI:10.1007/978-1-0716-1546-1_16',
+'Assessing the Stability of Biological Fibrils by Molecular-Scale Simulations',
+'img/springer_logo_high_res.png'
+]
+],'coarse');
+</script>
+			</div>
+		</summary>
+		<p>
+The self-assembly process of β-D-glucose oligomers on the surface of cellulose Iβ microfibril involves crystallization, and this process is analyzed in terms of the length and flexibility of the oligomer chain using molecular dynamics simulations. The characterization of this process involves the structural relaxation of the oligomer, the recognition of the cellulose I microfibril, and the formation of several hydrogen bonds. We also study the interaction between a	protofibril and the cellulose I microfibril in solution.
+		</p>
+		<p>
+High resolution data from all-atom molecular simulations is used to parameterize a Martini 3 coarse-grained (CG) model of cellulose I allomorphs and cellulose type-II fibrils. In this case, elementary molecules are represented by toplogical simplicial complex based on four effective beads centred in the positions of O2, O3, C6, and O6 atoms in the D-glucose cellulose subunit. Non-bonded interactions between CG beads are tuned according to a low statistical criterion of structural deviation using the Martini 3 type of interactions and are capable of being indistinguishable for all studied cases. Our model is capable of describing different fibril-twist angles associated with each type of cellulose fibril in close agreement with atomistic simulation. Our coarse-grain model poses a very small deviation from the native-like structure.
+		</p>
+		</details>
+		</div>
+		
+		<div class="w3-panel w3-border w3-round-xxlarge">
+		<details>
+		<summary>
+			<b>Old works, Hamiltonian model, Exact diagonalization, Quantum Chemistry</b><br>
+			<div class="w3-center w3-col w3-quarter w3-padding-32">
+				<img src="img/images_medium_ct-2017-00930w_0006.gif" style="height:auto; max-width:80%" class="w3-hover-opacity" alt="Otherwise">
+			</div>
+			<div class="w3-col w3-threequarter">
+			<table id='oldworks'>
+			</table>
+<script>
+insert([
+[
+ 'https://doi.org/10.1016/j.cplett.2019.04.023',
+ 'DOI:10.1016/j.cplett.2019.04.023',
+ 'Quantification of molecular orbitals based on projection operators: Methodological development and applications to basicity prediction of organic compounds in the gas phase',
+  ''
+ ],
+ [
+ 'https://doi.org/10.1021/acs.jctc.7b00930',
+ 'DOI:10.1021/acs.jctc.7b00930',
+ 'Energy Gaps of Polyradicals from an Effective and Transferable Hamiltonian with through-Bond Interactions ',
+ 'img/JCTC_logo.png'
+ ],
+ [
+ 'https://doi.org/10.1007/s13538-017-0535-7',
+ 'DOI:10.1007/s13538-017-0535-7',
+ 'On the separability of the extended molecule: Constructing the best localized molecular orbitals for an organic molecule bridging two model electrodes',
+ 'img/aip-site-1665400598970.webp'
+ ]
+ ],'oldworks');
+</script>
+			</div>
+		</summary>
+		</details>
 		</div>
 		</div>
 </div>
